      clause of the join.  This takes effect for eager load joins as
      well as query.join().  Note that in some scenarios the IN
      clause will appear in the WHERE clause of the query as well
      since this discrimination has multiple trigger points.
    
    - class.someprop.in_() raises NotImplementedError pending
      the implementation of "in_" for relation [ticket:1140]

    - fixed primary key update for many-to-many collections
      where the collection had not been loaded yet
      [ticket:1127]
      
    - Improved the behavior of query.join() when joining to
      joined-table inheritance subclasses, using explicit join
      criteria (i.e. not on a relation).

    - @orm.attributes.on_reconsitute and
      MapperExtension.on_reconstitute have been renamed to
      @orm.reconstructor and MapperExtension.reconstruct_instance

    - Fixed @reconstructor hook for subclasses which inherit from a
      base class.  [ticket:1129]

    - The composite() property type now supports a
      __set_composite_values__() method on the composite class which
      is required if the class represents state using attribute
      names other than the column's keynames; default-generated
      values now get populated properly upon flush.  Also,
      composites with attributes set to None compare correctly.
      [ticket:1132]

- sql
    - Temporarily rolled back the "ORDER BY" enhancement from
      [ticket:1068].  This feature is on hold pending further
      development.

0.5beta3
========

0.5beta3 includes all bugfixes listed under release "0.4.7".

- orm
    - The "entity_name" feature of SQLAlchemy mappers has been
      removed.  For rationale, see http://tinyurl.com/6nm2ne

    - the "autoexpire" flag on Session, sessionmaker(), and
      scoped_session() has been renamed to "expire_on_commit".  It
      does not affect the expiration behavior of rollback().

    - fixed endless loop bug which could occur within a mapper's